# cw-infuser

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  justfile  makefile  state.json
.github/workflows/: Basic.yml  Release.yml
art/c/: mandelbrot  mandelbrot.c
art/generators/: ipfs-metadata.sh
art/images/: 1.json
artifacts/: checksums.txt  cw_infuser-aarch64.wasm
contracts/cw-infuser/: CLAUDE.md  Cargo.toml  README.md
contracts/cw-infuser/schema/: cw-infuser.json
contracts/cw-infuser/src/: contract.rs  error.rs  lib.rs  msg.rs  state.rs
contracts/cw-infuser/src/handlers/: execute.rs  instantiate.rs  migrate.rs  query.rs
contracts/cw-infuser/src/replies/: instantiate.rs  mod.rs
contracts/cw-infuser/src/upgrades/: mod.rs  v0_3_0.rs  v0_4_0.rs  v0_5_0.rs
contracts/cw-infuser/tests/: integration.rs
contracts/cw-irl/: Cargo.toml  README.md
contracts/cw-irl/src/: contract.rs  error.rs  lib.rs
contracts/cw-raffle-minter/: README.md
contracts/cw721-svg/: README.md
contracts/cw721-svg-minter/: README.md
cw-infuser/: Cargo.toml
cw-infuser/src/: contract.rs  error.rs  msg.rs  state.rs
docs/: docusaurus.config.ts
docs/docs/: 00-intro.mdx
docs/docs/how-it-works/: 01-introduction.mdx  02-create.mdx  admin-features.mdx  admin-fetures.mdx  billing-and-revenue.mdx  eligible-collections.mdx  infused-collection.mdx  infusing-nfts.md
docs/proposal/: draft_metadata.json  draft_proposal.json  proposal.md
docs/src/components/HomepageFeatures/: index.tsx
schema/my-app/0.0.1/: execute_msg.json  instantiate_msg.json  query_msg.json
scripts/: Cargo.toml  README.md  build.sh  schema-and-codegen.sh
scripts/src/: infuser.rs  lib.rs  main.rs
scripts/src/deploy/: infuser.rs  mod.rs
scripts/ts/: codegen.ts  codegen.tsx  package-lock.json  package.json
src/: contract.rs  error.rs  integration_test.rs  lib.rs  msg.rs  state.rs
test-suite/: Cargo.toml
test-suite/src/: lib.rs
test-suite/src/common_setup/: contract_boxes empty.rs  contract_boxes.rs  helpers.rs  keeper.rs
test-suite/src/cw_infuser/tests/: integration_test.rs
test-suite/src/infuser/: test.rs
test-suite/src/infuser/test/: init.rs  payments.rs
