[workspace]
members = [ 
  "contracts/cw-infuser",
  "contracts/cw721/*",
   "packages/*",
   "scripts",
   "test-suite"
   ]
resolver = "2"
exclude = ["scripts"]
[workspace.features]
default = []

[workspace.dependencies]
cosmwasm-schema = "2.2.0"
cw-storage-plus = "2.0.0"
cosmwasm-std = { version = "2.2.0", features = [
  "cosmwasm_1_4",
  # Enable this if you only deploy to chains that have CosmWasm 2.0 or higher
  # "cosmwasm_2_0",
] }

cw2 = "2.0.0"
cw-asset = { version = "3.0.0" }
cw-utils = "2.0.0"
cw-ownable = "0.5.1"

cw-orch = { version = "0.28.0" }

cw721 = { library =  "cw721", git = "https://github.com/public-awesome/cw-nfts", ref = "a5abe476c1028b2563f995adab184b86e3fc03ff" }
cw721-base = {  git = "https://github.com/public-awesome/cw-nfts", ref = "a5abe476c1028b2563f995adab184b86e3fc03ff",features = ["library"] }
cw-infuser = { path = "./contracts/cw-infuser" }
cw-infusions = { path = "./packages/cw-infusions" }
cw-infuser-scripts = { path = "./scripts" }

anyhow = "1.0.79"
serde = { version = "1.0.197", default-features = false, features = ["derive"] }
sha2                 = { version = "0.10.2", default-features = false }
schemars = "0.8.16"

[profile.release]
rpath = false
lto = true
overflow-checks = true
opt-level = 3
debug = false
debug-assertions = false
