[workspace]
members = [ 
  "contracts/cw-infuser",
  #"contracts/cw-irl",
   "packages/*",
    "scripts",
 # "contracts/cw721/*",
 # "test-suite"
   ]
resolver = "2"

[workspace.package]
repository = "https://github.com/permissionlessweb/cw-infuser"
edition = "2021"
resolver = "2"
version = "0.6.0"
authors = ["hard-nett <hardnettt@proton.me>"]


[workspace.features]
default = []

[workspace.dependencies]
cw-infuser = { path = "./contracts/cw-infuser" }
cw-infusions = { path = "./packages/cw-infusions" }
# cw-infuser-scripts = { path = "./scripts",default-features = false  }

cosmwasm-schema = "2.2.0"
cosmwasm-std = { version = "2.2.0" }
cw-storage-plus = "2.0.0"
cw2 = "2.0.0"
cw-utils = "2.0.0"
cw-ownable = "2.1.0"
cw721 = { library =  "cw721", git = "https://github.com/public-awesome/cw-nfts", ref = "a5abe476c1028b2563f995adab184b86e3fc03ff" }
cw721-base = {  git = "https://github.com/public-awesome/cw-nfts", ref = "a5abe476c1028b2563f995adab184b86e3fc03ff",features = ["library"] }

cw-orch = { version = "0.28.0" }

anyhow = "1.0.79"
serde = { version = "1.0.197", default-features = false, features = ["derive"] }
sha2                 = { version = "0.10.2", default-features = false }
schemars = "0.8.16"
easy-addr = { path = "packages/easy-addr" }

[profile.release]
rpath = false
lto = true
overflow-checks = true
opt-level = 3
debug = false
debug-assertions = false
