[package]
name = "cw-infuser-scripts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
cosmrs = "0.15.0"
cosmwasm-std = { workspace = true }
cw-orch = { version = "0.28.0", features = ["daemon"] }
cw-orch-clone-testing = "0.6.4"
cw721 = "0.18.0"
dotenv = "0.15.0"
env_logger = { version = "0.11.3", default-features = false }
cw-infuser = {version = "0.4.2", path = "../contracts/cw-infuser" }
cw-infusions = {  path = "../packages/cw-infusions" }
sg721 = "^3.3"
sg721-base = "^3.3"
clap = "4.5.23"
