[package]
name = "cw-infuser-scripts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
clap = "4.5.23"
env_logger = { version = "0.11.3", default-features = false }
anyhow = "1.0.79"
cosmwasm-std = { workspace = true }
cw-infuser = { path = "../contracts/cw-infuser" }
cw-infusions = {  path = "../packages/cw-infusions" }
cw-orch = { workspace = true, features = ["daemon"] }
cw721 = { workspace = true }
sg721 = "^3.3"
sg721-base = "^3.3"