[package]
name = "test-suite"
version = "0.1.0"
edition = "2021"


[lib]
crate-type = ["cdylib", "rlib"]


[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []
default = ["sg"]
sg = ["sg-std", "sg721", "sg721-base"]
vanilla = []


[dependencies]
scripts = { path = "../scripts" }

cosmwasm-std = { workspace = true }
cw-storage-plus = { workspace = true }

anyhow = { workspace = true }
cosmwasm-schema = { workspace = true }
cw-infusions = { workspace = true }
serde = { workspace = true }
schemars = "0.8.16"
cw-multi-test = "1.2.0"
cw2 = "1.1.2"
cw721 = { workspace = true }
sg2 = "3.15.0"

sg721-base = { version = "3.2.0", optional = true }
sg-std = { version = "3.2.0", optional = true }
sg721 = { version = "3.2.0", optional = true }
#  For gating
hex = "0.4.3"
cw20-base = "=1.1.2"
cw-utils = "2.0.0"
cw-orch = { workspace = true, features = ["daemon"] }
cw-infuser = { path = "../contracts/cw-infuser" }
cw-orch-clone-testing = "0.6.4"

cw721-base = { git = "https://github.com/AbstractSDK/cw-nfts", version = "0.18.0" }
v020infuse = {  branch = "v020-migrate",package="cw-infuser",git = "https://github.com/permissionlessweb/cw-infuser"}
v020scripts =  {  branch = "v020-migrate",package="scripts",git = "https://github.com/permissionlessweb/cw-infuser"}

[dev-dependencies]
rand = "0.8.5"
abstract-cw-multi-test = { version = "1.0.1" }

