[package]
name = "cw-infuser"
version = "0.2.2"
authors = ["hard-nett <hardnettt@proton.me>"]
edition = "2021"

exclude = ["scripts"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
default = ["sg"]
sg = ["sg-std", "sg721", "sg721-base"]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/optimizer:0.16.0
"""
optimize-arm = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/optimizer-arm64:0.16.0
"""

[dependencies]
cosmwasm-schema = "1.5.11"
cosmwasm-std = { version = "1.5.11", features = [
  "cosmwasm_1_4",
  # Enable this if you only deploy to chains that have CosmWasm 2.0 or higher
  # "cosmwasm_2_0",
] }
cw-asset = { version = "3.0.0" }
cw-storage-plus = "1.2.0"
cw2 = "1.1.2"
cw-controllers = { version = "1.1.2" }

abstract-cw20 = "2.0.0"
abstract-cw20-base = "2.0.0"
cw-orch = { version = "0.22.2" }

cw721 =  "0.18.0"
cw721-base  = { version = "0.18.0", features = ["library"] }

# Stargaze libs
sg-std = {version= "^3.2", optional = true }
sg721 = {version= "^3.3", optional = true }
sg721-base = {version= "^3.3", optional = true }

clap = { version = "4.5.23", features = ["derive"] }
schemars = "0.8.16"
sha2 = { version = "0.10.8", default-features = false }
serde = { version = "1.0.197", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.58" }
semver                      = "1"
shuffle         = { git = "https://github.com/webmaster128/shuffle", branch = "rm-getrandom", version = "0.1.7" }
rand_core       = { version = "0.6.4", default-features = false }
rand_xoshiro    = { version = "0.6.0", default-features = false }
url                  = "2.2.2"
[dev-dependencies]
cw-multi-test = "1.2.0"
