[package]
name = "cw-infuser"
version  = { workspace = true }
authors = ["hard-nett <hardnettt@proton.me>"]
edition = "2021"
exclude = ["scripts"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
default = ["sg"]
sg = [ "sg721"]
# use library feature to disable all instantiate/execute/query exports
library = []

 
[dependencies]
cosmwasm-schema  = {workspace = true }
cosmwasm-std = { workspace = true, features = [
  "cosmwasm_1_4",
  # Enable this if you only deploy to chains that have CosmWasm 2.0 or higher
 "cosmwasm_2_0",
] }
cw-asset = "4.0.0"
cw-storage-plus =  { workspace = true }
cw2 =  { workspace = true }
cw-controllers = "2.0.0"
 
cw-orch =  { workspace = true }

cw721 =  { workspace = true }
cw721-base  = { workspace = true, features = ["library"] }
cw-infusions = {workspace = true }


sg721 = { version= "^3.3", optional = true }

clap = { version = "4.5.23", features = ["derive"] }
schemars = "0.8.16"
sha2 = { version = "0.10.8", default-features = false }
serde = { version = "1.0.197", default-features = false, features = ["derive"] }
semver                      = "1"
thiserror = { version = "1.0.58" }
url                  = "2.2.2"

cw721-v18 = { version = "0.18.0", package= "cw721" }
cw-infuser-v050  = {package = "cw-infuser",  branch = "feat/dnas", git ="https://github.com/permissionlessweb/cw-infuser", ref = "c2a3081b2d446b860edf14909df809a307c416a1"    }
cw-infusions-v050  = {package = "cw-infusions", branch = "feat/dnas",  git ="https://github.com/permissionlessweb/cw-infuser"   }
cosmwasm-std-v154 = { version = "1.5.4", features = ["cosmwasm_1_4" ], package = "cosmwasm-std"   }

shuffle         = { git = "https://github.com/webmaster128/shuffle", branch = "rm-getrandom", version = "0.1.7" }
rand_core       = { version = "0.6.4", default-features = false }
rand_xoshiro    = { version = "0.6.0", default-features = false }
nois                        = { version = "2.0.0" }

 
[dev-dependencies]
cw-multi-test = "2.2.0"
easy-addr = { workspace = true }